# qp_spline_demo

./: .gitignore  CMakeLists.txt  README.md  config.gflagsfile  main.cc
common/: CMakeLists.txt  limit_point.h  limits.cc  limits.h  linear_interpolation.h  log.h  point.h  qp_spline_gflags.cc  qp_spline_gflags.h  reference_point.h  references.cc  references.h
math_spline/: CMakeLists.txt  affine_constraint.cc  affine_constraint.h  polynomial_xd.cc  polynomial_xd.h  spline_1d.cc  spline_1d.h  spline_1d_constraint.cc  spline_1d_constraint.h  spline_1d_constraint_test.cc  spline_1d_generator.cc  spline_1d_generator.h  spline_1d_generator_test.cc  spline_1d_kernel.cc  spline_1d_kernel.h  spline_1d_kernel_test.cc  spline_1d_seg.cc  spline_1d_seg.h  spline_seg_kernel.cc  spline_seg_kernel.h
qp_spline_speed/: CMakeLists.txt  qp_spline_st_graph.cc  qp_spline_st_graph.h  speed_data.cc  speed_data.h
